# agent-browser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  install.sh  launch-browser.sh  logo.sh  package.json  test-real-sites.sh  uninstall-nmh.sh
docs/: QUICKSTART.md  architecture.md  email-provider.md  install.md  passkey-authorization.md  runtime.md  troubleshooting.md
docs/future/: EXECUTIVE_SUMMARY.md  INDEX.md  INSTALLATION.md  PASSKEY_AUTOMATION.md  QUICK_START.md  README.md
extension/: EXTENSION_ID  WELCOME_DEMO.md  key.pem  package.json  tsconfig.json
extension/entrypoints/: background.ts  content.ts  llm-worker.ts  offscreen.ts  welcome.ts
extension/lib/automation/: agent-stuck-detector.ts  auto-modal-handler.ts  click.ts  delay-utils.ts  email-inbox.ts  index.ts  magic-link-detector.ts  modal-detector.ts  modal-dismiss.ts  mode-config.ts  type.ts  types.ts  wait.ts
extension/lib/llm/: README.md  background-handler.ts  (+5 more)
extension/public/: create_icons.sh  manifest.json  offscreen.html  popup.html  resize_icon.py  welcome.css  welcome.html
extension/test/: QUICKSTART.md  README.md  delay-utils.test.ts  list_credentials.ts  magic-link-detector.test.ts  modal-detector.test.ts  package.json  passkey-control.html  passkey-demo-client.html  passkey-demo.html  send_mcp.ts  server.ts  test-modal.html  test-signup.ts
scripts/: get-extension-id.js  install-nmh.sh  test-nmh.js  verify-install.sh
server/: Cargo.toml  test_persistent.sh  test_stdio.sh
server/src/: credential_store.rs  main.rs
server/src/mcp/: mod.rs
(+18 files in other folders)
