[package]
name = "agent-browser-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-browser-server"
path = "src/main.rs"

[[bin]]
name = "nmh_shim"
path = "src/bin/nmh_shim.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
ring = "0.17"
base64 = "0.22"
dirs = "5"
chrono = "0.4"
